--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,65 +13,18 @@ html{
     ,margin-right: -30;
 }
 /* FONTS */
-@font-face{
-	font-family: 'Satisfy', cursive;
-	src: url(https://fonts.googleapis.com/css?family=Satisfy);
-	font-family: 'Alfa Slab One', cursive;
-	src: url(https://fonts.googleapis.com/css?family=Alfa+Slab+One);
-	font-family: 'Catamaran', sans-serif;
-	src: url(https://fonts.googleapis.com/css?family=Catamaran);
-	font-family: 'Poiret One', cursive;
-	src: url(https://fonts.googleapis.com/css?family=Poiret+One);
-	font-family: 'Fredoka One', cursive;
-	src: url(https://fonts.googleapis.com/css?family=Fredoka+One);
-}
-/* ABERTURA */
-.abertura{
-	margin: 0;
-	padding: 0;
-	z-index: 11;
-	overflow: hidden;
-	width: 100vw;
-}
-#img-cortina-esq, #img-cortina-dir{
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    z-index: 10;
-    width: 100vw;
-    height: 110vh;
-    opacity: 1;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    display: block;
-    margin: 0;
-    padding: 0;
-    -webkit-transition: left, right, padding 2s ease-out;
-    -o-transition: left, right, padding 2s ease-out;
-    transition: left, right, padding 2s ease-out;
-}
-#img-cortina-esq{
-	animation-name: abrirCortinaEsq;
-    left: 0;
-    padding-left: 0;
-}
-#img-cortina-dir{
-	animation-name: abrirCortinaDir;
-    right: 0;
-    padding-right: 0;
-}
-@keyframes abrirCortinaEsq {
-    0% {left: 0;display: block;opacity: 1;z-index: 10}
-    98% {left: -50%;display: none;opacity: 1;z-index: 10}
-    99% {left: -50%;display: none;opacity: 0;z-index: 0}
-    100% {left: 0; display: none;opacity: 0;z-index: 0}
-}
-@keyframes abrirCortinaDir {
-    0% {right: 0;display: block;opacity: 1;z-index: 10}
-    98% {right: -50%;display: none;opacity: 1;z-index: 10}
-    99% {right: -50%;display: none;opacity: 0;z-index: 0}
-    100% {right: 0; display: none;opacity: 0;z-index: 0}
-}
+@font-face{font-family:'Alfa Slab One';font-style:normal;font-weight:400;src:local('Alfa Slab One Regular'), local('AlfaSlabOne-Regular'), url(https://fonts.gstatic.com/s/alfaslabone/v7/6NUQ8FmMKwSEKjnm5-4v-4Jh2d1he-Wv.woff2) format('woff2');unicode-range:U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;}
+@font-face{font-family:'Alfa Slab One';font-style:normal;font-weight:400;src:local('Alfa Slab One Regular'), local('AlfaSlabOne-Regular'), url(https://fonts.gstatic.com/s/alfaslabone/v7/6NUQ8FmMKwSEKjnm5-4v-4Jh2dxhe-Wv.woff2) format('woff2');unicode-range:U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}
+@font-face{font-family:'Alfa Slab One';font-style:normal;font-weight:400;src:local('Alfa Slab One Regular'), local('AlfaSlabOne-Regular'), url(https://fonts.gstatic.com/s/alfaslabone/v7/6NUQ8FmMKwSEKjnm5-4v-4Jh2dJhew.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}
+@font-face{font-family:'Catamaran';font-style:normal;font-weight:400;src:local('Catamaran Regular'), local('Catamaran-Regular'), url(https://fonts.gstatic.com/s/catamaran/v4/o-0IIpQoyXQa2RxT7-5r8zRAW_0.woff2) format('woff2');unicode-range:U+0964-0965, U+0B82-0BFA, U+200C-200D, U+20B9, U+25CC;}
+@font-face{font-family:'Catamaran';font-style:normal;font-weight:400;src:local('Catamaran Regular'), local('Catamaran-Regular'), url(https://fonts.gstatic.com/s/catamaran/v4/o-0IIpQoyXQa2RxT7-5r6zRAW_0.woff2) format('woff2');unicode-range:U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}
+@font-face{font-family:'Catamaran';font-style:normal;font-weight:400;src:local('Catamaran Regular'), local('Catamaran-Regular'), url(https://fonts.gstatic.com/s/catamaran/v4/o-0IIpQoyXQa2RxT7-5r5TRA.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}
+@font-face{font-family:'Fredoka One';font-style:normal;font-weight:400;src:local('Fredoka One'), local('FredokaOne-Regular'), url(https://fonts.gstatic.com/s/fredokaone/v5/k3kUo8kEI-tA1RRcTZGmTlHGCac.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}
+@font-face{font-family:'Poiret One';font-style:normal;font-weight:400;src:local('Poiret One'), local('PoiretOne-Regular'), url(https://fonts.gstatic.com/s/poiretone/v5/UqyVK80NJXN4zfRgbdfbo5pcV_cx.woff2) format('woff2');unicode-range:U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;}
+@font-face{font-family:'Poiret One';font-style:normal;font-weight:400;src:local('Poiret One'), local('PoiretOne-Regular'), url(https://fonts.gstatic.com/s/poiretone/v5/UqyVK80NJXN4zfRgbdfbo5BcV_cx.woff2) format('woff2');unicode-range:U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}
+@font-face{font-family:'Poiret One';font-style:normal;font-weight:400;src:local('Poiret One'), local('PoiretOne-Regular'), url(https://fonts.gstatic.com/s/poiretone/v5/UqyVK80NJXN4zfRgbdfbo55cVw.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}
+@font-face{font-family:'Satisfy';font-style:normal;font-weight:400;src:local('Satisfy Regular'), local('Satisfy-Regular'), url(https://fonts.gstatic.com/s/satisfy/v8/rP2Hp2yn6lkG50LoCZOIHQ.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}
+
 /* ESTRUTURA (MENU, MIOLO...) */
 nav.navbar.navbar-expand-lg.navbar-light.bg-light.text-black.fixed-top{
 	height: 80px;
@@ -146,7 +99,7 @@ small{
 .banner h1, .banner h2, .banner h3, .banner p, .banner p a, .banner p b, .banner a, .banner a i{
 	opacity: 0;
 	animation-name: fadeIn;
-    animation-duration: 4s;
+    animation-duration: 2s;
     animation-fill-mode: forwards;
 }
 @keyframes fadeIn {
